A Responsive Registration Form

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Registration Form</title>
     <link
       rel="shortcut icon"
-      href="/Registration-form-20220622T040604Z-001/Registration-form/images/favicon-32x32.png"
+      href="images/favicon-32x32.png"
       type="image/x-icon"
     />
     <link
